refractor(homePage): refractored homepage method inside postController